5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_1053.log
== TEST (2019-04-09 16:56:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("cervo eh patrono do Harry Poter")
else:
	patrono
-- ERROR:
File "XXXX", line 1
    idade input(12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
else:
	patrono
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
else:
	print(patrono)
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
else:
	print(patrono)
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
else:
	print(patrono)
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
	
else(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
-- ERROR:
File "XXXX", line 10
    else(patrono != "cervo"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
	
else:
(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
-- ERROR:
File "XXXX", line 11
    (patrono != "cervo"):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == "cervo"):
	print("cervo eh patrono do Harry Poter")
	
else:
patrono != "cervo":
	print("nao eh patrono do Harry Poter")
-- ERROR:
File "XXXX", line 11
    patrono != "cervo":
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo":):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- ERROR:
File "XXXX", line 7
    if(patrono != "cervo":):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:03:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print("nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.153508
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono+"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono+"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + "nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono +_+"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + "nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + "nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + +"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + +"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono +"nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono +("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono +("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:09:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:09:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:10:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono +_+ ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:10:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:12:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:13:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.138431
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:13:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ("nao eh patrono do Harry Poter"))
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:14:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:14:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.194694
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:41:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:41:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:41:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.140575
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:41:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + " nao eh patrono do Harry Poter")
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:53:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + 'nao eh patrono do Harry Poter')
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:53:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:53:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != "cervo"):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.146857
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print("cervo eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print("cervo eh patrono do Harry Poter")
-- EXECUTION TIME:
0.133337
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:55:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print('cervo eh patrono do Harry Poter')
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:55:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print('cervo eh patrono do Harry Poter')
-- EXECUTION TIME:
0.136127
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:55:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print('cervo eh patrono do Harry Poter')
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:55:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print('cervo eh patrono do Harry Poter')
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:56:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	print(patrono + ' nao eh patrono do Harry Poter')
	
else:
	print('cervo eh patrono do Harry Poter')
-- EXECUTION TIME:
0.221111
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:59:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	print(mensagem)
	
else:
	print('cervo eh patrono do Harry Poter')
-- EXECUTION TIME:
0.137587
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:59:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono != 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	print(mensagem)
	
else:
	print('cervo eh patrono do Harry Poter')
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:01:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + 'nao eh patrono do Harry Potter'
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:01:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:01:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono= input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- EXECUTION TIME:
0.121544
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:02:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- EXECUTION TIME:
0.205524
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:15:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- EXECUTION TIME:
0.149298
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:15:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("animal do patrono:")

if(patrono == 'cervo'):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- EXECUTION TIME:
0.14596
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:16:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("animal do patrono:")

if(patrono == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:16:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("animal do patrono:")

if(patrono == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
	
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'

print(mensagem)
-- EXECUTION TIME:
0.172332
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:48:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'
	
print (mensagem)
-- EXECUTION TIME:
0.160555
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
